Fix line spacing

--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -274,7 +274,7 @@
 
     font-size: 16px;
     font-weight: 700;
-    line-height: 16px;
+    line-height: 20px;
   }
   .time{
     display: flex;
